Another checkpoint for the paper.

--- a/final_project/citations.bib
+++ b/final_project/citations.bib
@@ -15,3 +15,9 @@
 ,title = "{ION Robotic Lawnmower Competition}"
 ,howpublished = "http://www.ion.org/satdiv/alc/"
 ,year = "2011"}
+@book{siegwart2004introduction,
+  title={Introduction to autonomous mobile robots},
+  author={Siegwart, R. and Nourbakhsh, I.R.},
+  year={2004},
+  publisher={The MIT Press}
+}
