Final paper updates.

--- a/final_project/citations.bib
+++ b/final_project/citations.bib
@@ -21,3 +21,21 @@
   year={2004},
   publisher={The MIT Press}
 }
+@inproceedings{quigley2009ros,
+  title={ROS: an open-source Robot Operating System},
+  author={Quigley, M. and Gerkey, B. and Conley, K. and Faust, J. and Foote, T. and Leibs, J. and Berger, E. and Wheeler, R. and Ng, A.},
+  booktitle={ICRA Workshop on Open Source Software},
+  year={2009}
+}
+@INPROCEEDINGS{1307193, 
+author={Lingelbach, F.}, 
+booktitle={Robotics and Automation, 2004. Proceedings. ICRA '04. 2004 IEEE International Conference on}, 
+title={Path planning using probabilistic cell decomposition}, 
+year={2004}, 
+month={april-1 may}, 
+volume={1}, 
+number={}, 
+pages={ 467 - 472 Vol.1}, 
+keywords={ chain-like robotic platforms; high-dimensional static configuration spaces; lazy evaluation techniques; path planning method; probabilistic cell decomposition; probabilistic sampling; supervised sampling; mobile robots; path planning; probability;}, 
+doi={10.1109/ROBOT.2004.1307193}, 
+ISSN={1050-4729 },}
